<resources>
    <string name="app_name">Movies</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="label_storyline">Storyline</string>
    <string name="label_cast">Cast</string>
    <string name="label_movies_list">Movies list</string>

    <string name="sample_movie_name">Avengers: End Game</string>
    <string name="sample_movie_duration">137 min</string>
    <string name="sample_tags_list">Action, Adventure, Fantasy</string>
    <string name="sample_age_restriction">13+</string>
    <string name="sample_storyline">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="sample_actor_name_1">Robert Downey Jr.</string>
    <string name="sample_actor_name_2">Chris Evans</string>
    <string name="sample_actor_name_3">Mark Ruffalo</string>
    <string name="sample_actor_name_4">Chris Hemsworth</string>
</resources>