<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="0dp"
                android:layout_height="298dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/sample_movie_details_poster" />

            <TextView
                android:id="@+id/age_restriction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_4x"
                android:layout_marginTop="226dp"
                android:text="@string/sample_age_restriction"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="13+" />

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_4x"
                android:layout_marginTop="@dimen/space_3x"
                android:layout_marginEnd="@dimen/space_4x"
                android:text="@string/sample_movie_name"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/age_restriction"
                tools:text="Avengers: \nEnd Game" />

            <TextView
                android:id="@+id/movie_card_tags_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_4x"
                android:layout_marginTop="@dimen/space_1x"
                android:layout_marginEnd="@dimen/space_4x"
                android:text="@string/sample_tags_list"
                android:textColor="@color/accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_name"
                tools:text="Action, Adventure, Fantasy" />

            <ImageView
                android:id="@+id/rating_star_1"
                android:layout_width="13dp"
                android:layout_height="12dp"
                android:layout_marginStart="@dimen/space_4x"
                android:layout_marginTop="@dimen/space_2x"
                android:layout_marginEnd="@dimen/space_1x"
                app:layout_constraintEnd_toStartOf="@+id/rating_star_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tags_list_bottom_barrier"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:id="@+id/rating_star_2"
                android:layout_width="13dp"
                android:layout_height="12dp"
                android:layout_marginTop="@dimen/space_2x"
                android:layout_marginEnd="@dimen/space_1x"
                app:layout_constraintEnd_toStartOf="@+id/rating_star_3"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/rating_star_1"
                app:layout_constraintTop_toBottomOf="@+id/tags_list_bottom_barrier"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:id="@+id/rating_star_3"
                android:layout_width="13dp"
                android:layout_height="12dp"
                android:layout_marginTop="@dimen/space_2x"
                android:layout_marginEnd="@dimen/space_1x"
                app:layout_constraintEnd_toStartOf="@+id/rating_star_4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/rating_star_2"
                app:layout_constraintTop_toBottomOf="@+id/tags_list_bottom_barrier"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:id="@+id/rating_star_4"
                android:layout_width="13dp"
                android:layout_height="12dp"
                android:layout_marginTop="@dimen/space_2x"
                app:layout_constraintEnd_toStartOf="@+id/rating_star_5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/rating_star_3"
                app:layout_constraintTop_toBottomOf="@+id/tags_list_bottom_barrier"
                app:srcCompat="@drawable/ic_star" />

            <ImageView
                android:id="@+id/rating_star_5"
                android:layout_width="13dp"
                android:layout_height="12dp"
                android:layout_marginStart="@dimen/space_1x"
                android:layout_marginTop="@dimen/space_2x"
                app:layout_constraintStart_toEndOf="@+id/rating_star_4"
                app:layout_constraintTop_toBottomOf="@+id/tags_list_bottom_barrier"
                app:srcCompat="@drawable/ic_star" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/tags_list_bottom_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="movie_card_tags_list"
                tools:layout_editor_absoluteY="378dp" />

            <TextView
                android:id="@+id/movie_card_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_2x"
                android:layout_marginTop="@dimen/space_1x"
                android:text="@string/sample_reviews"
                android:textAllCaps="true"
                android:textColor="@color/secondary"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/rating_star_5"
                app:layout_constraintTop_toTopOf="@id/tags_list_bottom_barrier"
                tools:text="125 reviews" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/ratings_bottom_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="movie_card_reviews,rating_star_1,rating_star_2,rating_star_3,rating_star_4,rating_star_5"
                tools:layout_editor_absoluteY="402dp" />

            <TextView
                android:id="@+id/storyline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_4x"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="@dimen/space_4x"
                android:text="@string/label_storyline"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratings_bottom_barrier" />

            <TextView
                android:id="@+id/storyline_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_4x"
                android:layout_marginTop="@dimen/space_4x"
                android:layout_marginEnd="@dimen/space_4x"
                android:alpha="0.25"
                android:text="@string/sample_storyline"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyline" />

            <TextView
                android:id="@+id/cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_4x"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="@dimen/space_4x"
                android:text="@string/label_cast"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyline_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_actors_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_4x"
                android:layout_marginTop="@dimen/space_2x"
                android:layout_marginEnd="@dimen/space_4x"
                android:layout_marginBottom="@dimen/space_2x"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>